--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
+<!DOCTYPE html>
 <html>
-    <head>Olá Mundo</head>
-    <body>irrá whit3gh0st</body>
+<head>
+<meta charset="UTF-8"/>
+<title>Olá Mundo</title>
+</head>
+<body>
+irrá whit3gh0st
+</body>
 </html>
