--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Henrico Nardelli Bela</h1>
-            <h2>Python Developer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <h1>Henrico Bela</h1>
+            <h2>Python Developer and future Data Scientist</h2>
+            <a href="https://drive.google.com/file/d/1sWMaHbu9MSMN_qFeKoF9K_JWMEPr1WUP/view?usp=sharing" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,9 +73,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hello, I'm Henrico! 
-                        I'm 25... and I appreciate Games, Books, Programming, and more.
-                        A.I. student since 2021, python dev, and a future Data Scientist.
+                        Hello, I'm Henrico!<br> 
+                        I'm 25... and I appreciate Games, Books, Programming, and more.<br>
+                        A.I. student since 2021, python dev, and a future Data Scientist.<br>
                     </p>
                 </div>
             </div>
@@ -90,9 +90,9 @@
                 <h3>Stefanini</h3>
                 <h4>I.T. Intern</h4>
                 <p>
-                    Working with Process, Actives and Quality Management. 
-                    With the following tools: MS Excel, MS PowerPoint, MS Access Point.
-                    (Jan-2016 - Jun-2017)
+                    Working with Process, Actives and Quality Management.<br> 
+                    With the following tools: MS Excel, MS PowerPoint, MS Access Point.<br>
+                    (Jan-2016 - Jun-2017)<br>
                 </p>
             </div>
         </div>
@@ -106,7 +106,7 @@
             <span class="education-date">Jan 2022 - Jan 2024</span>
             <h4>Associate Degree - Tecnology in Artificial Intelligence</h4>
             <p>
-                At FIAP, I have the opportunity to connect with awesome people and develop my experiences in programming and Data Science.
+                At FIAP, I have the opportunity to connect with awesome people developing my experiences with programming and Data Science.
             </p>
         </div>
         <!-- End .education-block -->
@@ -137,7 +137,8 @@
                     <div class="project-info">
                         <h3>Europe IT Salary Analysis</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            An analysis which predict European IT Workers Salary.<br>
+                            Using Pandas, Matplotlib, and SKlearn to predictions.
                         </p>
                         <a href="https://github.com/henricobela/Python/blob/main/Artificial%20Intelligence/Machine%20Learning/Regress%C3%A3o/IT_Salary_Predict/model/Analise_Salarios_de_TI_Europa.ipynb">View Project</a>
                     </div>
@@ -151,11 +152,19 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>ID Verifier</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            An A.I. model which verify some ID's, and returns which ID can buy products.<br>
+                            This model uses a invented database.<br>
+                            We use the following libs:<br>
+                            - Streamlit<br>
+                            - Ngrok<br>
+                            - Requests<br>
+                            - Json<br>
+                            - Regex<br>
+                            - FuzzyWuzzy<br>
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/henricobela/Python/tree/main/Faculdade/Cyber/1o%20Semestre/idVerifier">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -168,14 +177,14 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
+            <li><img src="https://img.shields.io/badge/-Python-black?logo=Python"></li>
+            <li>Scikit Learn</li>
+            <li>TensorFlow</li>
+            <li>Keras</li>
+            <li>Numpy</li>
+            <li>Matplotlib</li>
+            <li>Seaborn</li>
+            <li>Pandas</li>
             <li>Java</li>
             <li>C</li>
             <li>C#</li>
