--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
                         <strong><bold>📙 Focusing my studies on ↴<bold></strong><br><br>
 
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" width="50" height="50"/> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tensorflow/tensorflow-original.svg" width="50" height="50"/>
-                        
+                        <br><br>
+
                         <p align="left">
-                            <strong><bold>🚀 My Knowlegdes ↴<bold></strong>
+                            <strong><bold>🚀 My Knowlegdes ↴<bold></strong><br><br>
 
                           <img src="https://img.shields.io/badge/-Python-black?logo=Python"> 
                           <img src="https://img.shields.io/badge/-TensorFlow-black?logo=TensorFlow"> 
