--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="project-info">
                         <h3>ID Verifier</h3>
                         <p>
-                            An A.I. model which verify some ID's, and returns which ID can buy products.<br>
+                            An A.I. model which verify some ID's,<br>and returns which ID can buy products.<br>
                             Using FuzzyWuzzy and Regex to verify.
                         </p>
                         <a href="https://github.com/henricobela/Python/tree/main/Faculdade/Cyber/1o%20Semestre/idVerifier">View Project</a>
@@ -194,13 +194,19 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li><img src="https://img.shields.io/badge/-Python-black?logo=Python"></li>
-            <li><img src="https://img.shields.io/badge/-scikit learn-black?logo=scikit learn"></li>
-            <li><img src="https://img.shields.io/badge/-TensorFlow-black?logo=TensorFlow"></li>
-            <li><img src="https://img.shields.io/badge/-pandas-black?logo=pandas"></li>
+            <li>Python</li>
+            <li>Scikit Learn</li>
+            <li>TensorFlow</li>
+            <li>Keras</li>
             <li>Numpy</li>
             <li>Matplotlib</li>
             <li>Seaborn</li>
+            <li>Office Package</li>
+            <li>Linux (Mint Distribuition)</li>
+            <li>Git</li>
+            <li>SQL</li>
+            <li>Google Colab</li>
+            <li>Jupyter Notebook</li>
 
         </ul>
     </div>
@@ -209,7 +215,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/henrico.developer@gmail.com">
+            <form method="POST" action="https://formspree.io/f/mnqrqyvr">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
@@ -225,7 +231,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2022</span> Henrico Bela
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -236,22 +242,19 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/henricobela" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                            <a href="https://stackoverflow.com/users/19695834/henrico-nardelli" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/henricobela/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/henrico.bela" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/henricodev" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
