--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Henrico Bela</h1>
             <h2>Python Developer and future Data Scientist</h2>
-            <a href="https://drive.google.com/file/d/1sWMaHbu9MSMN_qFeKoF9K_JWMEPr1WUP/view?usp=sharing" class="btn-rounded-white">Download Resume</a>
+            <a href="https://drive.google.com/file/d/11fe2Sv_kMjCZ_Jkvb9NwZZbRIj7huQl2/view?usp=share_link" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
