--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Europe IT Salary Analysis</h3>
+                        <h3>Classifying Images with CNN's</h3>
                         <p>
-                            An analysis which predict European IT Workers Salary.<br>
-                            Using Pandas, Matplotlib, and SKlearn to predictions.
+                            An analysis which predict Breast Cancer.<br>
+                            Using Pandas, Matplotlib, and SKlearn, TensorFlow to predictions.
                         </p>
-                        <a href="https://github.com/henricobela/Python/blob/main/Artificial%20Intelligence/Machine%20Learning/Regress%C3%A3o/IT_Salary_Predict/model/Analise_Salarios_de_TI_Europa.ipynb">View Project</a>
+                        <a href="https://github.com/henricobela/Python/blob/main/Faculdade/Machine%20Learning%20%26%20Redes%20Neurais/RN-CK4/RN_IA_Checkpoint5_HENRICO_NARDELLI_BELA_RM95985.ipynb">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -176,12 +176,12 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>ID Verifier</h3>
+                        <h3>Advanced Machine Learning</h3>
                         <p>
-                            An A.I. model which verify some ID's,<br>and returns which ID can buy products.<br>
-                            Using FuzzyWuzzy and Regex to verify.
+                            Advanced Machine Learning concepts,<br>applied to a statistical analisys<br>
+                            Using Sklearn, pipelines, graphviz, and more.
                         </p>
-                        <a href="https://github.com/henricobela/Python/tree/main/Faculdade/Cyber/1o%20Semestre/idVerifier">View Project</a>
+                        <a href="https://github.com/henricobela/Python/blob/main/Faculdade/Machine%20Learning%20%26%20Redes%20Neurais/ML-CK5/ML_IA_Checkpoint5_HENRICO_NARDELLI_RM_95985.ipynb">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
