--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Henrico Bela</h1>
-            <h2>Python Developer and future Data Scientist</h2>
+            <h2>Machine Learning Intern at SantoDigital</h2>
             <a href="https://drive.google.com/file/d/11fe2Sv_kMjCZ_Jkvb9NwZZbRIj7huQl2/view?usp=share_link" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -119,6 +119,15 @@
                     (Jan-2016 - Jun-2017)<br>
                 </p>
             </div>
+	    <div data-date="December 2021 – yet">
+		<h3>SantoDigital</h3>
+		<h4>Machine Learning Intern</h4>
+		<p>
+		    Working with AutoML (Vertex A.I. from GCP), Data augumentation.<br> 
+		    Also building pipelines for ML Models, and more.<br>
+		    (Dec-2021 - yet)<br>
+		</p>
+	    </div>
         </div>
     </div>
     <!-- End #experience -->
