--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
                     (Jan-2016 - Jun-2017)<br>
                 </p>
             </div>
-	    <div data-date="December 2021 – yet">
+	    <div data-date="December 2021 – December 2023">
 		<h3>SantoDigital</h3>
 		<h4>Machine Learning Intern</h4>
 		<p>
 		    Working with AutoML (Vertex A.I. from GCP), Data augumentation.<br> 
 		    Also building pipelines for ML Models, and more.<br>
-		    (Dec-2021 - yet)<br>
+		    (Dec-2021 - December 2023)<br>
 		</p>
 	    </div>
         </div>
