--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1>Henrico Bela</h1>
             <h2>Data Scientist</h2>
             <h2>ML / DL enthusiast</h2>
-            <a href="https://drive.google.com/file/d/11fe2Sv_kMjCZ_Jkvb9NwZZbRIj7huQl2/view?usp=share_link" class="btn-rounded-white">Download Resume</a>
+            <a href="https://drive.google.com/file/d/1FhdPsrbK43gl_Zt2w215ftUKvIKHkube/view" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
