--- a/index.html
+++ b/index.html
@@ -169,12 +169,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Classifying Images with CNN's</h3>
+                        <h3>A Artificial Neural Network from Scratch</h3>
                         <p>
-                            An analysis which predict Breast Cancer.<br>
-                            Using Pandas, Matplotlib, and SKlearn, TensorFlow to predictions.
+                            Using only numpy and math to build a neural network from scratch.<br>
                         </p>
-                        <a href="https://github.com/henricobela/Python/blob/main/Faculdade/Machine%20Learning%20%26%20Redes%20Neurais/RN-CK4/RN_IA_Checkpoint5_HENRICO_NARDELLI_BELA_RM95985.ipynb">View Project</a>
+                        <a href="https://github.com/henricobela/Python/tree/main/Studies/Artificial%20Intelligence/Neural_Networks/Scratch%20Neural%20Network">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -186,12 +185,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Advanced Machine Learning</h3>
+                        <h3>CNN Image Classification using Fashion MNIST</h3>
                         <p>
-                            Advanced Machine Learning concepts,<br>applied to a statistical analisys<br>
-                            Using Sklearn, pipelines, graphviz, and more.
+                            <br>A simple CNN used to classify clothes, using the Fashion MNIST dataset.<br>
                         </p>
-                        <a href="https://github.com/henricobela/Python/blob/main/Faculdade/Machine%20Learning%20%26%20Redes%20Neurais/ML-CK5/ML_IA_Checkpoint5_HENRICO_NARDELLI_RM_95985.ipynb">View Project</a>
+                        <a href="https://github.com/henricobela/Python/tree/main/Studies/Artificial%20Intelligence/Deep%20Learning/CNN/Clothes_classification">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
